Add media queries for section goToConcert

--- a/index.html
+++ b/index.html
@@ -523,12 +523,12 @@
         </section>
 
         <!-- Members family -->
-        <section class="membersFamily__wrapper">
-          <div class="membersFamily">
-            <h1 class="membersFamily__h1">Soft Soprano</h1>
+        <section class="familyMembers__wrapper">
+          <div class="familyMembers">
+            <h1 class="familyMembers__h1">Soft Soprano</h1>
             <img src="./assets/mobile/familyMembers/soprano-img.png" alt="" />
-            <div class="membersFamily__information">
-              <p class="membersFamily__member">Soprano</p>
+            <div class="familyMembers__information">
+              <p class="familyMembers__member">Soprano</p>
               <p>
                 It is the highest-pitched member of the family and is the
                 smallest one as well. Famous in Jazz & Classic music
@@ -540,11 +540,11 @@
           </div>
 
           <!-- Alto Saxophone -->
-          <div class="membersFamily">
-            <h1 class="membersFamily__h1">Sexy Alto</h1>
+          <div class="familyMembers">
+            <h1 class="familyMembers__h1">Sexy Alto</h1>
             <img src="./assets/mobile/familyMembers/alt-img.png" alt="" />
-            <div class="membersFamily__information">
-              <p class="membersFamily__member">Alto</p>
+            <div class="familyMembers__information">
+              <p class="familyMembers__member">Alto</p>
               <p>
                 It is the second highest-pitched member of the family. Slightly
                 larger bore and mouthpiec. Used in Jazz & bigbands
@@ -556,11 +556,11 @@
           </div>
 
           <!-- Tenor Saxophone -->
-          <div class="membersFamily">
-            <h1 class="membersFamily__h1">Young Tenor</h1>
+          <div class="familyMembers">
+            <h1 class="familyMembers__h1">Young Tenor</h1>
             <img src="./assets/mobile/familyMembers/tenor-img.png" alt="" />
-            <div class="membersFamily__information">
-              <p class="membersFamily__member">Tenor</p>
+            <div class="familyMembers__information">
+              <p class="familyMembers__member">Tenor</p>
               <p>
                 Tenor is medium-sized. Is made of brass and has a gold- or
                 silver-plated finish. Is popular as well with jazz & big bands
@@ -572,13 +572,13 @@
           </div>
 
           <!-- Bariton Saxophone -->
-          <div class="membersFamily">
-            <h1 class="membersFamily__h1">Big g Bariton</h1>
+          <div class="familyMembers">
+            <h1 class="familyMembers__h1">Big g Bariton</h1>
             <img src="./assets/mobile/familyMembers/bariton-img.png" alt="" />
-            <div class="membersFamily__information">
-              <p class="membersFamily__member">Bariton</p>
+            <div class="familyMembers__information">
+              <p class="familyMembers__member">Bariton</p>
               <p>
-                Bariton is the biggest g in the family. It is known for its
+                Bariton is the biggest g in the family. He is known for its
                 rich, deep, and warm tone, making it a popular choice for
                 providing a foundation of sound in ensembles.
               </p>
@@ -590,30 +590,36 @@
         </section>
         <div class="cutted__background"></div>
         <!-- The concerts -->
-        <section class="concerts">
-          <p class="concerts__title">The concerts</p>
-          <p>
-            <span class="concert__qoute">"</span>The saxophonist's art is to
-            convey emotions through a soulful, rich tone concerts
-            <span class="concert__qoute">"</span>
-          </p>
-
-          <img src="./assets/mobile/theConcerts/saxophone-player1.png" alt="" />
-        </section>
-
+        <div class="concerts__background">
+          <section class="concerts">
+            <p class="concerts__title">The concerts</p>
+            <p>
+              <span class="concert__qoute">"</span>The saxophonist's art is to
+              convey emotions through a soulful, rich tone concerts
+              <span class="concert__qoute">"</span>
+            </p>
+            <div class="concerts__saxophonist--bg">
+              <img
+                class="concerts__saxophonist"
+                src="./assets/mobile/theConcerts/saxophone-player.png"
+                alt=""
+              />
+            </div>
+          </section>
+        </div>
         <div class="cutted__background__up"></div>
 
         <!-- goToConcerts -->
         <section class="goToConcerts">
           <p class="goToConcerts__adolpheAndSapphire">Adolphe and Sapphire</p>
           <div class="goToConcerts__title">
-            <p>
+            <p class="goToConcerts__go">
               Go <span class="goToConcerts__title__small">to</span> Concerts
             </p>
-            <p>in their</p>
+            <p class="goToConcerts__inTheir">in their</p>
             <p class="goToConcerts__title__freeTime">free time</p>
           </div>
-          <p>
+          <p class="goToConcerts__information">
             They end their days checking a performance in “Muziekinstrumenten
             museum Brussels”
           </p>
@@ -639,23 +645,30 @@
             alt="Ticket 3"
           />
         </section>
+        <div class="cutted__background"></div>
+        
+        <div class="mim__background">
+          <section class="mim">
+            <p class="mim__perfomances">The Performances</p>
+            <p>
+              Let’s enjoy a beautiful performance this evening in the MIM
+              together to experience a real connection with your partner.
+            </p>
 
-        <section class="mim">
-          <p class="mim__perfomances">The Performances</p>
-          <p>
-            Let’s enjoy a beautiful performance this evening in the MIM together
-            to experience a real connection with your partner.
-          </p>
+            <img
+              class="mim__img"
+              src="./assets/mobile/mim/mim-concert.png"
+              alt=""
+            />
 
-          <img src="./assets/mobile/mim/mim-concert.png" alt="" />
-
-          <div class="agenda__concerts">
-            <p>Get a look in the agenda from MIM</p>
-            <button class="baritonBtn button__style" role="button">
-              Agenda concerts
-            </button>
-          </div>
-        </section>
+            <div class="agenda__concerts">
+              <p>Get a look in the agenda from MIM</p>
+              <button class="baritonBtn button__style" role="button">
+                Agenda concerts
+              </button>
+            </div>
+          </section>
+        </div>
         <div class="cutted__background__up"></div>
         <footer>
           <div class="footer__adres">
