Fix bugs responsive

--- a/index.html
+++ b/index.html
@@ -365,8 +365,8 @@
         </div>
 
         <!-- Saxophone features -->
+        <h1 class="floating__text">Let's get to know her better</h1>
         <section class="sapphire">
-          <h1>Let's get to know her better</h1>
           <!-- Mouth -->
           <div class="sapphire__mouth">
             <p>Mouth Piece</p>
@@ -589,6 +589,7 @@
           </div>
         </section>
         <div class="cutted__background"></div>
+
         <!-- The concerts -->
         <div class="concerts__background">
           <section class="concerts">
@@ -646,7 +647,7 @@
           />
         </section>
         <div class="cutted__background"></div>
-        
+
         <div class="mim__background">
           <section class="mim">
             <p class="mim__perfomances">The Performances</p>
