Fix animation gsap sectionTwo mobile

--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
   <body>
     <main>
       <div class="background__image">
-        <img
+        <!-- <img
           class="sapphire__song"
           src="./assets/mobile/features/sapphire.png"
           alt=""
         />
         <audio class="titanic__song" src="/song/titanic.mp3"></audio>
-        <audio src=""></audio>
+        <audio src=""></audio> -->
         <!-- Intro -->
         <section class="intro">
           <img
@@ -134,7 +134,7 @@
               alt="adolphe sax red images"
             />
           </picture>
-          <div class="sectionTwo__text">
+          <div class="sectionTwo__text sectionTwo__text--1">
             <img
               loading="lazy"
               class="sectionTwo__miniArrowOne"
@@ -146,7 +146,7 @@
               experimenting with different instruments.
             </p>
           </div>
-          <div class="sectionTwo__text">
+          <div class="sectionTwo__text sectionTwo__text--2">
             <img
               loading="lazy"
               class="sectionTwo__miniArrowTwo"
@@ -341,18 +341,12 @@
               <p class="features__love__the">The</p>
               <p class="features__love__features">features</p>
               <p class="features__love__adolphe">Adolphe</p>
-              <picture>
-                <source
-                  media="(min-width: 834px)"
-                  srcset="./assets/ipad/features/loves.png"
-                />
-                <img
-                  loading="lazy"
-                  class="loves"
-                  src="./assets/mobile/features/loves.png"
-                  alt=""
-                />
-              </picture>
+              <img
+                loading="lazy"
+                class="loves"
+                src="./assets/mobile/features/loves.png"
+                alt=""
+              />
             </div>
             <div class="features__text">
               <p>
