Add animation on adolphe.js for mobile

--- a/index.html
+++ b/index.html
@@ -359,7 +359,10 @@
         </div>
 
         <!-- Saxophone features -->
-        <h1 class="floating__text">Let's get to know her better</h1>
+        <div class="getToKnowHer">
+          <h1>Let's get to know her better</h1>
+          <p>Click on the red buttons to see all details ...</p>
+        </div>
         <section class="sapphire">
           <!-- Mouth -->
           <div class="sapphire__mouth">
@@ -503,7 +506,7 @@
 
         <!-- Family -->
         <section class="family">
-          <p class="family__p">A few year went by ...</p>
+          <p class="family__p family__p--1">A few year went by ...</p>
           <div class="family__title">
             <p class="family__title__soThey">So they</p>
             <p class="family__title__decide">
@@ -513,7 +516,7 @@
               A <span class="span__family">Family</span>
             </p>
           </div>
-          <p class="family__p">Four beautifull kids</p>
+          <p class="family__p family__p--2">They made 4 beautifull kids</p>
         </section>
 
         <!-- Members family -->
@@ -524,7 +527,7 @@
             <div class="familyMembers__information">
               <p class="familyMembers__member">Soprano</p>
               <p>
-                It is the highest-pitched member of the family and is the
+                First kid of the family and is the
                 smallest one as well. Famous in Jazz & Classic music
               </p>
             </div>
