--- a/index.html
+++ b/index.html
@@ -523,7 +523,7 @@
         <section class="familyMembers__wrapper">
           <div class="familyMembers">
             <h1 class="familyMembers__h1">Soft Soprano</h1>
-            <img src="./assets/mobile/familyMembers/soprano-img.png" alt="" />
+            <img class="familyMembers__img" src="./assets/mobile/familyMembers/soprano-img.png" alt="" />
             <div class="familyMembers__information">
               <p class="familyMembers__member">Soprano</p>
               <p>
@@ -539,7 +539,7 @@
           <!-- Alto Saxophone -->
           <div class="familyMembers">
             <h1 class="familyMembers__h1">Sexy Alto</h1>
-            <img src="./assets/mobile/familyMembers/alt-img.png" alt="" />
+            <img class="familyMembers__img" src="./assets/mobile/familyMembers/alt-img.png" alt="" />
             <div class="familyMembers__information">
               <p class="familyMembers__member">Alto</p>
               <p>
@@ -555,7 +555,7 @@
           <!-- Tenor Saxophone -->
           <div class="familyMembers">
             <h1 class="familyMembers__h1">Young Tenor</h1>
-            <img src="./assets/mobile/familyMembers/tenor-img.png" alt="" />
+            <img class="familyMembers__img" src="./assets/mobile/familyMembers/tenor-img.png" alt="" />
             <div class="familyMembers__information">
               <p class="familyMembers__member">Tenor</p>
               <p>
@@ -571,7 +571,7 @@
           <!-- Bariton Saxophone -->
           <div class="familyMembers">
             <h1 class="familyMembers__h1">Big g Bariton</h1>
-            <img src="./assets/mobile/familyMembers/bariton-img.png" alt="" />
+            <img class="familyMembers__img" src="./assets/mobile/familyMembers/bariton-img.png" alt="" />
             <div class="familyMembers__information">
               <p class="familyMembers__member">Bariton</p>
               <p>
