Fix responsiveness for the animation

--- a/index.html
+++ b/index.html
@@ -591,7 +591,7 @@
         <div class="concerts__background">
           <section class="concerts">
             <p class="concerts__title">The concerts</p>
-            <p>
+            <p class="concert__text">
               <span class="concert__qoute">"</span>The saxophonist's art is to
               convey emotions through a soulful, rich tone concerts
               <span class="concert__qoute">"</span>
@@ -622,7 +622,7 @@
             museum Brussels”
           </p>
           <p class="goToConcerts__join">Let’s join them!</p>
-          <i class="fa fa-arrow-down fa-2x" aria-hidden="true"></i>
+          <i class="fa fa-arrow-down fa-2x goToConcerts__arrow" aria-hidden="true"></i>
         </section>
 
         <!-- Get in touch -->
@@ -661,7 +661,9 @@
 
             <div class="agenda__concerts">
               <p>Get a look in the agenda from MIM</p>
-              <button class="baritonBtn button__style" role="button">
+              <a href="https://www.mim.be/en/calendar">
+                <button class="button__style" role="button">
+              </a>
                 Agenda concerts
               </button>
             </div>
