Add function for songs play and pause

--- a/index.html
+++ b/index.html
@@ -549,7 +549,12 @@
                   Famous in Jazz & Classic music
                 </p>
               </div>
-              <button class="sopranoBtn button__style" role="button">
+              <button
+                class="sopranoBtn button__style"
+                name="soprano"
+                role="button"
+              >
+                <i class="fa fa-play-circle"></i>
                 Play Song
               </button>
             </div>
@@ -570,8 +575,8 @@
                   mouthpiece. Used in jazz and big bands.
                 </p>
               </div>
-              <button class="altBtn button__style" role="button">
-                Play Song
+              <button class="altBtn button__style" name="alto" role="button">
+                <i class="fa fa-play-circle"></i> Play Song
               </button>
             </div>
 
@@ -590,7 +595,8 @@
                   silver-plated finish. Is popular as well with jazz & big bands
                 </p>
               </div>
-              <button class="tenorBtn button__style" role="button">
+              <button class="tenorBtn button__style" name="tenor" role="button">
+                <i class="fa fa-play-circle"></i>
                 Play Song
               </button>
             </div>
@@ -611,8 +617,12 @@
                   providing a foundation of sound in ensembles.
                 </p>
               </div>
-              <button class="baritonBtn button__style" role="button">
-                Play Song
+              <button
+                class="baritonBtn button__style"
+                name="bariton"
+                role="button"
+              >
+                <i class="fa fa-play-circle"></i> Play song
               </button>
             </div>
           </section>
