Add secret message

--- a/index.html
+++ b/index.html
@@ -10,14 +10,6 @@
       <div class="preloader"></div>
       <div class="wrapper visually-hidden">
         <div class="background__image">
-          <!-- <img
-          class="sapphire__song"
-          src="./assets/mobile/features/sapphire.png"
-          alt=""
-        />
-        <audio class="titanic__song" src="/song/titanic.mp3"></audio>
-        <audio src=""></audio> -->
-          <!-- Intro -->
           <section class="intro">
             <img
               loading="lazy"
@@ -173,6 +165,25 @@
               alt="secret
             button"
             />
+            <div class="sectionTwo__secretInfo">
+              <div class="sectionTwo__secretInfo__close">
+                <i
+                  class="fa fa-times fa-3x sectionTwo__secretInfo__close__button"
+                  aria-hidden="true"
+                ></i>
+              </div>
+              <div class="secretInfo__text">
+                <h1>Did you know??</h1>
+
+                <p>1. The real name of Adolphe Sax is: Antoine-Joseph Sax</p>
+                <p>
+                  2. The word saxophone actually has nothing to do with the
+                  construction or the instrument itself but with the inventor of
+                  the instrument. In fact, the word "saxophone" means "the sound
+                  of Sax.
+                </p>
+              </div>
+            </div>
           </section>
           <div class="cutted__background"></div>
 
