Fix information about sapphire and responsive cards

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   </head>
   <body>
     <main>
-      <div class="preloader"></div>
-      <div class="wrapper visually-hidden">
+      <!-- <div class="preloader"></div>
+      <div class="wrapper visually-hidden"> -->
         <div class="background__image">
           <section class="intro">
             <img
@@ -435,6 +435,9 @@
               ></i>
             </div>
             <div class="sapphire__text">
+              <div>
+                <img src="./assets/mobile/mouthpiece.png" alt="mouthpiece" />
+              </div>
               <h1 class="sapphire__h1">Mouth piece</h1>
               <p>
                 Her mouth piece because she has really cute lips but her kisses
@@ -457,6 +460,9 @@
               ></i>
             </div>
             <div class="sapphire__text">
+              <div>
+                <img src="./assets/mobile/lefthand.png" alt="lefthand" />
+              </div>
               <h1 class="sapphire__h1">
                 Left hand <br />
                 <span class="sapphire__smallText">palm keys</span>
@@ -477,6 +483,10 @@
               <i class="fa fa-times fa-3x bodyCloseIcon" aria-hidden="true"></i>
             </div>
             <div class="sapphire__text">
+              <div>
+                <img src="./assets/mobile/body.png" alt="body" />
+              </div>
+
               <h1 class="sapphire__h1">Body</h1>
               <p>
                 Her body is so fit you can see all her muscles ... Her body is
@@ -498,6 +508,10 @@
               ></i>
             </div>
             <div class="sapphire__text">
+              <div>
+                <img src="./assets/mobile/righthand.png" alt="hearts" />
+              </div>
+
               <h1 class="sapphire__h1">
                 Right hand <span class="sapphire__smallText">palm keys</span>
               </h1>
@@ -518,6 +532,9 @@
               <i class="fa fa-times fa-3x bellCloseIcon" aria-hidden="true"></i>
             </div>
             <div class="sapphire__text">
+              <div>
+                <img src="./assets/mobile/bell.png" alt="hearts" />
+              </div>
               <h1 class="sapphire__h1">Bell</h1>
               <p>
                 Her bell is the best part of her body and the sexiest one. It
